# DocBotV2

./: .replit  app.py  build_index_pipeline.py  main.py  pyproject.toml  query_logs.json  rclone.conf  verify_gcs_access.py
Workspace Archive/: appdotpyapril24v1.txt  maindotpy.txt
attached_assets/: Pasted-Analyze-User-Input-The-user-ran-app-py-presumably-python3-app-py-after-installing-dependencies-fr-1745623220434.txt  Pasted-Deployment-Source-Log-2025-04-25-17-27-48-06-962e37f7-System-forwarding-local-port-8080-to-external--1745627761344.txt  Pasted-Look-at-this-line-from-your-log-DEBUG-Unique-document-type-values-found-in-index-Product-Mar-1745624292388.txt  Pasted-Okay-here-are-instructions-you-can-provide-to-an-agentic-LLM-capable-of-editing-code-files-to-apply-1745627980518.txt  Pasted-Okay-that-file-tree-is-very-helpful-Based-on-that-structure-we-can-generate-a-much-more-detailed--1745625105917.txt  Pasted-nstructions-for-LLM-Agent-Edit-app-py-Open-the-app-py-file-for-editing-Locate-Insertion-Point--1745624086871.txt  Pasted-s-10-MainRec-Lucidworks-B2B-Clients-pptx-OtherSrc-5-Answer-I-don-t-have-enough-informatio-1745625950387.txt
static/: app.js  index.css
templates/: index.html
